--- a/app/templates/jogos/login.html
+++ b/app/templates/jogos/login.html
@@ -20,8 +20,8 @@
         {% endwith %}
 
         <h1>Faça seu login</h1>
-        <form method="POST" action="{{ url_for('autenticar') }}">
-            <input type="hidden" name="proxima" value="{{ proxima or url_for('index') }}">
+        <form method="POST" action="{{ url_for('jogos.autenticar') }}">
+            <input type="hidden" name="proxima" value="{{ proxima or 'jogos.index' }}">
             <p><label>Nome de usuário:</label> <input class="form-control" type="text" name="usuario" required></p>
             <p><label>Senha:</label> <input class="form-control" type="password" name="senha" required></p>
             <p><button class="btn btn-primary" type="submit">Entrar</button></p>
