--- a/app/templates/jogos/editar.html
+++ b/app/templates/jogos/editar.html
@@ -1,18 +1,19 @@
 {% extends "base.html" %}
 {% block conteudo %}
-      <form method="POST" action="{{ url_for('jogos.criar') }}">
+      <form method="POST" action="{{ url_for('jogos.atualizar') }}">
         <fieldset>
+          <input type="hidden" name="id" value="{{ jogo.id }}">
           <div class="form-group">
             <label for="nome">Nome</label>
-            <input type="text" id="nome" name="nome" class="form-control">
+            <input type="text" id="nome" name="nome" class="form-control" value="{{ jogo.nome }}">
           </div>
           <div class="form-group">
             <label for="categoria">Categoria</label>
-            <input type="text" id="categoria" name="categoria" class="form-control">
+            <input type="text" id="categoria" name="categoria" class="form-control" value="{{ jogo.categoria }}">
           </div>
           <div class="form-group">
             <label for="console">Console</label>
-            <input type="text" id="console" name="console" class="form-control">
+            <input type="text" id="console" name="console" class="form-control" value="{{ jogo.console }}">
           </div>
           <button type="submit" class="btn btn-primary btn-salvar espaco">Salvar</button>
         </fieldset>
