--- a/app/templates/jogos/login.html
+++ b/app/templates/jogos/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jogoteca</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='app.css') }}">
   </head>
   <body>
     <div class="container">
@@ -24,7 +25,7 @@
             <input type="hidden" name="proxima" value="{{ proxima or 'jogos.index' }}">
             <p><label>Nome de usuário:</label> <input class="form-control" type="text" name="usuario" required></p>
             <p><label>Senha:</label> <input class="form-control" type="password" name="senha" required></p>
-            <p><button class="btn btn-primary" type="submit">Entrar</button></p>
+            <p><button class="btn btn-primary espaco" type="submit">Entrar</button></p>
         </form>
     </div>
 </body>
