Faz upload das capas dos jogos

--- a/app/templates/jogos/novo.html
+++ b/app/templates/jogos/novo.html
@@ -1,6 +1,15 @@
 {% extends "base.html" %}
 {% block conteudo %}
-      <form method="POST" action="{{ url_for('jogos.criar') }}">
+      <form method="POST" action="{{ url_for('jogos.criar') }}" enctype="multipart/form-data">
+        <figure class="img thumbnail col-md-4">
+          <img class="img-fluid" src="{{ url_for('jogos.imagem', nome_arquivo='capa_padrao.jpg') }}">
+          <figcaption>
+            <label class="fileContainer">
+              Mudar Capa
+              <input type="file" name="arquivo" accept=".jpg">
+            </label>
+          </figcaption>
+        </figure>
         <fieldset>
           <div class="form-group">
             <label for="nome">Nome</label>
