--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -12,15 +12,13 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1 class="display-4">Welcome to FlaskAPP!</h1>
+        <h1 class="display-4">Welcome to FlaskAPP Games!</h1>
         <p class="lead">
-          This is a simple hero unit, a simple jumbotron-style component for
-          calling extra attention to featured content or information.
+          CRUD of Games
         </p>
         <hr class="my-4" />
         <p>
-          It uses utility classes for typography and spacing to space content
-          out within the larger container.
+          Clique aqui embaixo para começar
         </p>
         <p class="lead">            
           <a class="btn btn-primary btn-lg" href="{{ url_for('jogos.index') }}" role="button">Jogos</a>
